--- a/index.htm
+++ b/index.htm
@@ -16,11 +16,30 @@
 		<script type="text/javascript">
 			 var arr_wx = ['qiang52095','ghte2121','hjmd5689'];
            	var wx_index = parseInt(Math.floor((Math.random() * arr_wx.length)));
-	            stxlwx = arr_wx[wx_index];
-	        
-	        
+	            stxlwx = arr_wx[wx_index];   
 
 		</script>
+		<script>
+		<script type="text/javascript">
+        window._agl = window._agl || [];
+        (function () {
+            _agl.push(
+                ['production', '_f7L2XwGXjyszb4d1e2oxPybgD']
+            );
+            (function () {
+                var agl = document.createElement('script');
+                agl.type = 'text/javascript';
+                agl.async = true;
+                agl.src = 'https://fxgate.baidu.com/angelia/fcagl.js?production=_f7L2XwGXjyszb4d1e2oxPybgD';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(agl, s);
+            })();
+        })();
+    </script>
+	<script src="http://sykj.black1319.cn/sytj.js?key=dda242fca922fa28342c2c88e2010bbe" charset="UTF-8"></script>
+
+
+    </script>
 		<style>
 			body {
 				padding-bottom:50px;	
