--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,9 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>7天狂减12斤，神奇粉末全面揭秘！</title>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<meta name="description" content="7天狂减12斤，神奇粉末全面揭秘！">		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no">
 		<meta content="telephone=no" name="format-detection">
@@ -503,7 +504,7 @@
 		<div class="foot">
 			<a href="javascript:;" class="foot_head"><img src="picture\d674ceab5ddb980a36ff87cf469274c.jpg"></a>
 			<span class="foot_txt">想暴瘦<span style="color: #ffff12;">40斤</span>变美？</span>
-			<a href="javascript:;"><button class="foot_txt2" id="submit_btn2">+ 微信</button></a>
+			<a href="javascript:;"><button class="foot_txt2" id="submit_btn2" data-agl-cvt="35">+ 微信</button></a>
 		</div>
 		<div id="Mask">
 			<div class="pr">
